// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeaderLabel renders 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with grow 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left ax-table__header-label--grow"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with isSelected 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left ax-table__header-label--selected"
>
  <div
    className="ax-table__header-label-underline ax-table__header-label-underline--selected"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with shrink 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-left ax-table__header-label--shrink"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;

exports[`TableHeaderLabel renders with textAlign 1`] = `
<th
  className="ax-table__header-label ax-table__header-label--align-right"
>
  <div
    className="ax-table__header-label-underline"
  >
    Test
  </div>
</th>
`;
